--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -1,4 +1,3 @@
-# SPDX-License-Identifier: GPL-2.0-only
 #
 # Logo configuration
 #
@@ -26,6 +25,10 @@ config LOGO_LINUX_VGA16
 
 config LOGO_LINUX_CLUT224
 	bool "Standard 224-color Linux logo"
+	default y
+
+config LOGO_VARISCITE_CLUT224
+	bool "224-color Variscite Linux logo"
 	default y
 
 config LOGO_DEC_CLUT224
@@ -66,6 +69,11 @@ config LOGO_SUPERH_VGA16
 config LOGO_SUPERH_CLUT224
 	bool "224-color SuperH Linux logo"
 	depends on SUPERH
+	default y
+
+config LOGO_M32R_CLUT224
+	bool "224-color M32R Linux logo"
+	depends on M32R
 	default y
 
 endif # LOGO
