--- a/arch/arm/boot/dts/imx6ull-var-som-concerto-board.dtsi
+++ b/arch/arm/boot/dts/imx6ull-var-som-concerto-board.dtsi
@@ -27,3 +27,11 @@
 		>;
 	};
 };
+
+/* ttymxc4 UART */
+&uart5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_uart5>;
+	fsl,uart-has-rtscts;
+	status = "okay";
+};
