--- a/arch/arm/boot/dts/imx6ulz-var-som-concerto-board.dtsi
+++ b/arch/arm/boot/dts/imx6ulz-var-som-concerto-board.dtsi
@@ -6,11 +6,31 @@
  * published by the Free Software Foundation.
  */
 
-#include "imx6ull-var-som-concerto-board.dtsi"
+#include "imx6ul-imx6ull-var-som-concerto-board.dtsi"
 
 / {
 	backlight {
 		status = "disabled";
+	};
+};
+
+&iomuxc_snvs {
+	pinctrl_enet2_gpio: enet2_gpiogrp {
+		fsl,pins = <
+			MX6ULL_PAD_SNVS_TAMPER5__GPIO5_IO05	0x1b0b0 /* fec2 reset */
+		>;
+	};
+
+	pinctrl_ft5x06_ts_gpio: ft5x06_ts_gpiogrp {
+		fsl,pins = <
+			MX6ULL_PAD_SNVS_TAMPER9__GPIO5_IO09	0x80000000
+		>;
+	};
+
+	pinctrl_gpio_keys_snvs: gpio_keys_snvsgrp {
+		fsl,pins = <
+			MX6ULL_PAD_SNVS_TAMPER8__GPIO5_IO08	0x17059 /* Wakeup */
+		>;
 	};
 };
 
@@ -26,6 +46,3 @@
 	status = "disabled";
 };
 
-&uart5 {
-	status = "disabled";
-};
