--- a/arch/arm/boot/dts/imx6ulz-var-som.dtsi
+++ b/arch/arm/boot/dts/imx6ulz-var-som.dtsi
@@ -6,7 +6,7 @@
  * published by the Free Software Foundation.
  */
 
-#include "imx6ull-var-som.dtsi"
+#include "imx6ul-imx6ull-var-dart.dtsi"
 
 / {
 	pxp_v4l2 {
@@ -14,8 +14,22 @@
 	};
 };
 
-&adc1 {
-	status = "disabled";
+&iomuxc_snvs {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hog_2>;
+
+	pinctrl_hog_2: hoggrp-2 {
+		fsl,pins = <
+			MX6ULL_PAD_SNVS_TAMPER4__GPIO5_IO04	0x1b0b0	/* BT Enable */
+			MX6ULL_PAD_SNVS_TAMPER6__GPIO5_IO06	0x03029	/* WLAN Enable */
+		>;
+	};
+
+	pinctrl_enet1_gpio: enet1_gpiogrp {
+		fsl,pins = <
+			MX6ULL_PAD_SNVS_TAMPER0__GPIO5_IO00	0x1b0b0 /* fec1 reset */
+		>;
+	};
 };
 
 &fec1 {
