--- a/arch/arm/boot/dts/imx6ul-imx6ull-var-som-wifi.dtsi
+++ b/arch/arm/boot/dts/imx6ul-imx6ull-var-som-wifi.dtsi
@@ -63,6 +63,8 @@
 };
 
 &usdhc1 {
+	#address-cells = <1>;
+	#size-cells = <0>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>, <&pinctrl_32k_clk>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_32k_clk>;
@@ -70,4 +72,9 @@
 	keep-power-in-suspend;
 	vmmc-supply = <&reg_sd1_vmmc>;
 	status = "okay";
+
+	brcmf: bcrmf@1 {
+		reg = <1>;
+		compatible = "brcm,bcm4329-fmac";
+	};
 };
