--- a/arch/arm/boot/dts/imx6ul-imx6ull-var-som-nand.dtsi
+++ b/arch/arm/boot/dts/imx6ul-imx6ull-var-som-nand.dtsi
@@ -24,17 +24,17 @@
 
 	partition@2 {
 		label = "uboot-env";
-		reg = <0x00400000 0x00200000>;
+		reg = <0x00400000 0x00100000>;
 	};
 
 	partition@3 {
 		label = "kernel";
-		reg = <0x00600000 0x00800000>;
+		reg = <0x00500000 0x00c00000>;
 	};
 
 	partition@4 {
 		label = "rootfs";
-		reg = <0x00e00000 0x3f200000>;
+		reg = <0x01100000 0x3ef00000>;
 	};
 };
 
